
package Cuerpos;

public abstract class Cuerpo {
    public abstract String Cuerpo();
}
