
package Cuerpos;


public class CuerpoElfo extends Cuerpo{

    @Override
    public String Cuerpo() {
        return "Agil y veloz, con una afinidad natural hacia la magia. "
                + "Fisicamente menos resistente pero con muy buenas "
                + "destrezas.";
    }
    
}
