
package Cuerpos;


public class CuerpoHumano extends Cuerpo{

    @Override
    public String Cuerpo() {
        return "Equilibrado en todos los aspectos. Un cuerpo versatil "
                + "con gran inteligencia y buena agilidad, aunque "
                + "con una fuerza moderada.";
    }
    
}
