
package Cuerpos;


public class CuerpoOrco extends Cuerpo{

    @Override
    public String Cuerpo() {
        return "Robusto y brutal, con gran fuerza y resistenci. Poco preciso "
                + "y lento, pero imparable en combate fisico.";
    }
    
}
