package Monturas;

public abstract class Montura {

    public abstract String montura();
}
