package Arma;

public abstract class Arma {

    public abstract String arma();
    public abstract String stats();
    public abstract String getName();
}
