package Armadura;

public abstract class Armadura {

    public abstract String armadura();
}
